Add multiple linear regression

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Throughout the notebook we will use the diabetes dataset to understand the maths"
+    "Throughout the notebook we will use the diabetes dataset to understand the maths behind Linear Regression!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,19 +38,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OLS Linear Regression Equation"
+    "## Simple Linear Regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Classical Linear Regression Equation and Residual Sum of Squares(RSS) is given by:\n",
+    "Simple Linear Regression Equation and Residual Sum of Squares(RSS) is given by:\n",
     "\n",
     "$$\n",
+    "y = \\beta_0 + \\beta_1x + \\epsilon \\\\\n",
     "\\hat{y} = \\hat{\\beta_0} + \\hat{\\beta_1}x \\\\\n",
-    "RSS = (y_1 - \\hat{\\beta_0}+\\hat{\\beta_1}x_1)^2+(y_2 - \\hat{\\beta_0} + \\hat{\\beta_1}x_2)^2 + ... + (y_n - \\hat{\\beta_0} + \\hat{\\beta_1}x_n)^2 \\\\\n",
-    "RSS = \\sum_{i=0}^n(y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i)^2 \\\\\n",
+    "RSS = (y_1 - \\hat{\\beta_0} - \\hat{\\beta_1}x_1)^2+(y_2 - \\hat{\\beta_0} - \\hat{\\beta_1}x_2)^2 + ... + (y_n - \\hat{\\beta_0} - \\hat{\\beta_1}x_n)^2 \\\\\n",
+    "RSS = \\sum_{i=0}^n(y_i - \\hat{\\beta_0} - \\hat{\\beta_1}x_i)^2 \\\\\n",
     "$$"
    ]
   },
@@ -58,40 +59,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Computing $\\beta_0$ and $\\beta_1$\n",
+    "### Computing $\\hat{\\beta_0}$ and $\\hat{\\beta_1}$\n",
     "\n",
     "To solve for $\\beta_0$ and $\\beta_1$, the normal Equations for the above are given by:\n",
     "\n",
     "$$\n",
-    "\\frac{\\delta{RSS}}{\\delta{\\beta_0}} = -2\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
-    "\\frac{\\delta{RSS}}{\\delta{\\beta_1}} = -2x_i\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\\frac{\\delta{RSS}}{\\delta{\\hat{\\beta_0}}} = -2\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
+    "\\frac{\\delta{RSS}}{\\delta{\\hat{\\beta_1}}} = -2x_i\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
+    "$$\n",
+    "\n",
     "Solving the first normal equation for $\\beta_0$:\n",
     "\n",
     "$$\n",
-    "\\frac{\\delta{RSS}}{\\delta{\\beta_0}} = -2\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
+    "\\frac{\\delta{RSS}}{\\delta{\\hat{\\beta_0}}} = -2\\sum (y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
     "\\sum{y_i} - n\\hat{\\beta_0}-\\hat{\\beta_1}\\sum{x_i} = 0 \\\\\n",
     "\\underline{\\hat{\\beta_0} = \\bar{y} - \\hat{\\beta_1}\\bar{x}} \\;\\;\\;\\;\\;\n",
     "where \\;\n",
     "\\bar{x} = \\frac{\\sum{x_i}}{n} \\;\\;\\;\n",
     "\\bar{y} = \\frac{\\sum{y_i}}{n}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
+    "\n",
     "Solving the second normal equation for $\\beta_1$:\n",
     "\n",
     "$$\n",
-    "\\frac{\\delta{RSS}}{\\delta{\\beta_1}} = \\sum{x_i}(y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
+    "\\frac{\\delta{RSS}}{\\delta{\\hat{\\beta_1}}} = \\sum{x_i}(y_i - \\hat{\\beta_0}+\\hat{\\beta_1}x_i) = 0 \\\\\n",
     "\\sum{x_i}(y_i - \\bar{y} + \\hat{\\beta_1}\\bar{x} - \\hat{\\beta_1}x_i) = 0 \\;\\;\\;\\;\n",
     "using \\; \\hat{\\beta_0} = \\bar{y} - \\hat{\\beta_1}\\bar{x} \\\\\n",
     "\\sum{x_i}(y_i-\\bar{y}) = \\hat{\\beta_1}\\sum{(x_i-\\bar{x})x_i} \\\\\n",
@@ -100,12 +91,12 @@
     "where \\;\n",
     "\\sum{(y_i-\\bar{y})}\\bar{x} = 0 \\;\\;\n",
     "\\sum{(x_i-\\bar{x})}\\bar{x} = 0\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +106,14 @@
       "RSS is 2528481.7816048963\n",
       "Coeff for age is 304.1830745282948\n",
       "Intercept is 152.13348416289608\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2495: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+      "  return ptp(axis=axis, out=out, **kwargs)\n"
      ]
     }
    ],
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +143,7 @@
       "Calculated coeff is 304.1830745282948\n",
       "Calculated intercept is 152.13348416289594\n",
       "\n",
-      "It can be seen that the values calculated using the formulas are same as the values calculated by the statsmodel. Our maths holds up!\n"
+      "It can be seen that the values calculated using the formulas are same as the values calculated by the statsmodel.         Our maths holds up!\n"
      ]
     }
    ],
@@ -162,7 +161,8 @@
     "print(f\"Calculated intercept is {intercept}\")\n",
     "\n",
     "print()\n",
-    "print(\"It can be seen that the values calculated using the formulas are same as the values calculated by the statsmodel. Our maths holds up!\")"
+    "print(\"It can be seen that the values calculated using the formulas are same as the values calculated by the statsmodel. \\\n",
+    "        Our maths holds up!\")"
    ]
   },
   {
@@ -178,15 +178,15 @@
     "$$\n",
     "where $\\sigma^2$ is variance of $\\epsilon$ which is the uncontrolled error in $y = \\beta_0 + \\beta_1x + \\epsilon$, which again is something we don't know.\n",
     "\n",
-    "The approximation of $\\sigma$ is given by Residual Standard Error\n",
+    "The approximation of $\\sigma$ derived from maximum likelihood for a uncorrelated, zero mean, normally distributed $\\epsilon$, is given by Residual Standard Error\n",
     "$$\n",
-    "\\sigma = RSE = \\sqrt{\\frac{RSS}{(n-2)}}\n",
+    "\\sigma = RSE = \\sqrt{\\frac{RSS}{(n-p-1)}} = \\sqrt{\\frac{RSS}{(n-2)}} \\;\\;\\;\\; p = Number \\; of \\; features\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,9 +292,116 @@
     "\\underline{R^2 = 1 - \\frac{RSS}{TSS}} \\;\\;\\;\\; where \\; TSS = \\sum(y_i - \\bar{y})^2\n",
     "$$\n",
     "\n",
-    "TSS simply indicates the amount of variance in target variable already present. \n",
+    "TSS simply indicates the amount of variance in target variable already present. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS of the model is 2528481.7816048963\n",
+      "TSS of the model is 2621009.124434389\n",
+      "\n",
+      "R-sqaure of the model is 0.03530218264671636\n",
+      "F-score of the model is 16.101374010745623\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"RSS of the model is {results.ssr}\")\n",
+    "print(f\"TSS of the model is {results.centered_tss}\")\n",
+    "print()\n",
+    "print(f\"R-sqaure of the model is {results.rsquared}\")\n",
+    "print(f\"F-score of the model is {results.fvalue}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets verify!\n",
     "\n",
-    "Another commonly used approach is to calculate the Adjusted R-sqaure. This takes into number of predictors used in the model. This is to help filter out the predictors that might not have significant impact on the model. Their addition might reduce the R-sqaure value a bit but not enough to distinguish it from noise predictors. Its formula is given by:\n",
+    "$$\n",
+    "R^2 = 1 - \\frac{RSS}{TSS} \\;\\; = 1 - \\frac{2528481.78}{2621009.12} \\;\\; = 0.36 \\\\\n",
+    "$$\n",
+    "\n",
+    "It seems like R-sqaure values are correct according to our formula."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple Linear Regresssion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multiple Linear Regression Equation and Residual Sum of Squares(RSS) for *p* number of predictors/features and *n* number of data points is given by:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = \\hat{\\beta_0} + \\hat{\\beta_1}x_1  + \\hat{\\beta_2}x_2 + ... + \\hat{\\beta_p}x_p \\\\\n",
+    "RSS = (y_1 - \\hat{\\beta_0} - \\hat{\\beta_1}x_{1,1} - ... - \\hat{\\beta_p}x_{1,p})^2 + (y_2 - \\hat{\\beta_0} - \\hat{\\beta_1}x_{2,1} - ... - \\hat{\\beta_p}x_{2,p})^2 + ... + (y_n - \\hat{\\beta_0} - \\hat{\\beta_1}x_{n,1} - ... - \\hat{\\beta_p}x_{n,p})^2 \\\\\n",
+    "RSS = \\sum_{i=0}^n(y_i - \\hat{\\beta_0} - \\hat{\\beta_1}x_{i,1} - ... - \\hat{\\beta_1}x_{i,p})^2 \\\\\n",
+    "$$\n",
+    "\n",
+    "Since in multiple linear regression, X is a two dimensional matrix of size (n * (p + 1)) and $\\beta$ is a matrix of size ((p + 1) * 1) and Y is a matrix of size n, we will use the matrix notation to write the above equations for MLR\n",
+    "\n",
+    "$$\n",
+    "Y = X\\beta + \\epsilon \\\\\n",
+    "\\hat{Y} = X\\hat{\\beta} \\\\\n",
+    "RSS = (Y - X\\hat{\\beta})^T(Y - X\\hat{\\beta})\n",
+    "$$\n",
+    "\n",
+    "Note that in the above above matrix X and $\\beta$ have dimensions of (p+1) instead of p to accomodate for the intercept. Also RSS is of dimension 1 * 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computing $\\hat{\\beta}$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\delta{RSS}}{\\delta{\\hat{\\beta}}} = -2X^T(Y - X\\hat{\\beta}) = 0 \\\\\n",
+    "-X^TY + X^TX\\hat{\\beta} = 0 \\\\\n",
+    "X^TX\\hat{\\beta} = X^TY \\\\\n",
+    "\\underline{\\hat{\\beta} = (X^TX)^{-1}X^TY}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standard Error of $\\hat{\\beta}$\n",
+    "\n",
+    "Similar to Linear regression before, we find the the standard error for $\\hat{\\beta}$ which is given by:\n",
+    "\n",
+    "$$\n",
+    "SE(\\hat{\\beta})^2 = \\sigma^2(X^TX)^{-1} \\\\\n",
+    "$$\n",
+    "\n",
+    "And similarly the approximation of $\\sigma$ derived from maximum likelihood for a uncorrelated, zero mean, normally distributed $\\epsilon$, is given by Residual Standard Error\n",
+    "$$\n",
+    "\\sigma = RSE = \\sqrt{\\frac{RSS}{(n-p-1)}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Accuracy\n",
+    "\n",
+    "We already know $R^2$ that we can use for testing the model accuracy. Along with that, to accomodate for the number of predictors, we use Adjusted $R^2$. This takes into number of predictors used in the model. This is to help filter out the predictors that might not have significant impact on the model. Their addition might reduce the R-sqaure value a bit but not enough to distinguish it from noise predictors. Its formula is given by:\n",
     "\n",
     "$$\n",
     "Adj. R^2 = 1 - \\frac{RSS/(n-p-1)}{TSS/(n-1)}\n",
@@ -315,8 +422,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets test this out using our Diabetes dataset and using all the 10 predictors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +465,7 @@
     "Lets verify!\n",
     "\n",
     "$$\n",
-    "R^2 = 1 - \\frac{RSS}{TSS} \\;\\; = 1 - \\frac{1263983.15}{2621009.12} \\;\\; = 0.51 \\\\\n",
+    "R^2 = 1 - \\frac{RSS}{TSS} \\;\\; = 1 - \\frac{1263983.15}{2621009.12} \\;\\; = 0.52 \\\\\n",
     "Adj. R^2 = 1 - \\frac{RSS/(n-p-1)}{TSS/(n-1)} \\;\\; = 1 - \\frac{1263983.15/(442-10-1)}{2621009.12/(432-1)} \\;\\;\n",
     "= 1 - \\frac{3002.33}{6081.22} \\;\\; = 1 - 0.493\\;\\;  = 0.507\n",
     "$$\n",
@@ -365,6 +479,25 @@
     "\n",
     "WOHOOO!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO\n",
+    "\n",
+    "- Compare t-score for all individual features\n",
+    "- Maximum Likelihood\n",
+    "- Confidence Interval\n",
+    "- coeff and std error in multiple linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
