MLR and Max Likelihood

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -103,9 +103,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RSS is 2528481.7816048963\n",
-      "Coeff for age is 304.1830745282948\n",
-      "Intercept is 152.13348416289608\n"
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                disease   R-squared:                       0.035\n",
+      "Model:                            OLS   Adj. R-squared:                  0.033\n",
+      "Method:                 Least Squares   F-statistic:                     16.10\n",
+      "Date:                Fri, 03 Jul 2020   Prob (F-statistic):           7.06e-05\n",
+      "Time:                        21:04:51   Log-Likelihood:                -2539.2\n",
+      "No. Observations:                 442   AIC:                             5082.\n",
+      "Df Residuals:                     440   BIC:                             5091.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "age          304.1831     75.806      4.013      0.000     155.196     453.170\n",
+      "const        152.1335      3.606     42.192      0.000     145.047     159.220\n",
+      "==============================================================================\n",
+      "Omnibus:                       52.996   Durbin-Watson:                   1.921\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               26.909\n",
+      "Skew:                           0.438   Prob(JB):                     1.43e-06\n",
+      "Kurtosis:                       2.167   Cond. No.                         21.0\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     },
     {
@@ -126,9 +148,7 @@
     "model = sm.OLS(y, X_age)\n",
     "results = model.fit()\n",
     "rss = results.ssr\n",
-    "print(f\"RSS is {rss}\")\n",
-    "print(f\"Coeff for age is {results.params[0]}\")\n",
-    "print(f\"Intercept is {results.params[1]}\")"
+    "print(results.summary())"
    ]
   },
   {
@@ -235,7 +255,37 @@
     "t = \\frac{\\hat{\\beta_1} - 0}{SE({\\hat{\\beta_1}})}\n",
     "$$\n",
     "\n",
-    "Using this, we can compute the $p-value$ to check if the value of the coefficient is small enough to indicate that there is relationship between feature and output is not due to chance, and null hypothesis can be discarded."
+    "Using this and the degrees of freedom given by (n-p), we can compute the $p-value$ to check if the value of the coefficient is small enough to indicate that there is relationship between feature and output is not due to chance, and null hypothesis can be discarded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confidence Intervals\n",
+    "\n",
+    "We know that y is drawn from the Normal Distribution given by:\n",
+    "$$\n",
+    "y \\sim N(\\beta_0 + \\beta_1x, \\sigma^2)\n",
+    "$$\n",
+    "\n",
+    "As a result $\\hat{\\beta_0}$ is also normally distributed:\n",
+    "$$\n",
+    "\\hat{\\beta_0} \\sim N(\\beta_0, \\sigma^2[\\frac{1}{n} + \\frac{\\bar{x}^2}{\\sum_{i=1}^n(x_i-\\bar{x})^2}]) \\\\\n",
+    "\\hat{\\beta_0} \\sim N(\\beta_0, SE(\\hat{\\beta_0})^2)\n",
+    "$$\n",
+    "\n",
+    "And $\\hat{\\beta_1}$ is also normally distributed:\n",
+    "$$\n",
+    "\\hat{\\beta_1} \\sim N(\\beta_1, \\frac{\\sigma^2}{\\sum_{i=1}^n(x_i-\\bar{x})^2}) \\\\\n",
+    "\\hat{\\beta_1} \\sim N(\\beta_1, SE(\\hat{\\beta_1})^2)\n",
+    "$$\n",
+    "\n",
+    "Using the above, the confidence interval for 95% is given by:\n",
+    "$$\n",
+    "\\hat{\\beta_0} - t_{0.025, n-2}SE(\\hat{\\beta_0}) \\; \\leq \\beta_0 \\leq \\; \\hat{\\beta_0} + t_{0.025, n-2}SE(\\hat{\\beta_0}) \\\\\n",
+    "\\hat{\\beta_1} - t_{0.025, n-2}SE(\\hat{\\beta_1}) \\; \\leq \\beta_1 \\leq \\; \\hat{\\beta_1} + t_{0.025, n-2}SE(\\hat{\\beta_1})\n",
+    "$$"
    ]
   },
   {
@@ -247,12 +297,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.025 confidence level for coeff is 155.193981254\n",
+      "0.975 confidence level for coeff is 453.17216674599996\n",
+      "0.025 confidence level for intercept is 145.046801912\n",
+      "0.975 confidence level for intercept is 159.220166088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets also verify the condfidence interval from the above equations\n",
+    "\n",
+    "t_95_440 = 1.9654 # Can be retrieved from the t-table online\n",
+    "\n",
+    "conf_coeff_low = 304.183074 - (t_95_440 * 75.80599)\n",
+    "conf_coeff_high = 304.183074 + (t_95_440 * 75.80599)\n",
+    "conf_intercept_low = 152.133484 - (t_95_440 * 3.60572)\n",
+    "conf_intercept_high = 152.133484 + (t_95_440 * 3.60572)\n",
+    "\n",
+    "print(f\"0.025 confidence level for coeff is {conf_coeff_low}\")\n",
+    "print(f\"0.975 confidence level for coeff is {conf_coeff_high}\")\n",
+    "print(f\"0.025 confidence level for intercept is {conf_intercept_low}\")\n",
+    "print(f\"0.975 confidence level for intercept is {conf_intercept_high}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "t-statistic of coeff from the model is 4.012651743018033\n",
       "t-statistic of intercept from the model is 42.192219335877745\n",
       "Calculated t-statistic of coeff is 4.012651743018033\n",
       "Calculated t-statistic of intercept is 42.19221933587771\n",
       "\n",
-      "Holds up again!\n"
+      "HOORAY! Values are same.\n"
      ]
     }
    ],
@@ -268,7 +350,7 @@
     "print(f\"Calculated t-statistic of intercept is {t_intercept}\")\n",
     "\n",
     "print()\n",
-    "print(\"Holds up again!\") "
+    "print(\"HOORAY! Values are same.\") "
    ]
   },
   {
@@ -297,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,6 +469,7 @@
     "\n",
     "$$\n",
     "SE(\\hat{\\beta})^2 = \\sigma^2(X^TX)^{-1} \\\\\n",
+    "\\underline{SE(\\hat{\\beta_{j}})^2 = \\sigma^2(X^TX)^{-1}_{j,j}} \\\\\n",
     "$$\n",
     "\n",
     "And similarly the approximation of $\\sigma$ derived from maximum likelihood for a uncorrelated, zero mean, normally distributed $\\epsilon$, is given by Residual Standard Error\n",
@@ -438,11 +521,7 @@
      "output_type": "stream",
      "text": [
       "RSS of the model is 1263983.156255485\n",
-      "TSS of the model is 2621009.124434389\n",
-      "\n",
-      "R-sqaure of the model is 0.5177494254132934\n",
-      "Adjusted R-sqaure of the model is 0.506560316954205\n",
-      "F-score of the model is 46.27262550062717\n"
+      "TSS of the model is 2621009.124434389\n"
      ]
     }
    ],
@@ -451,18 +530,128 @@
     "model = sm.OLS(y, X_OLS)\n",
     "results = model.fit()\n",
     "print(f\"RSS of the model is {results.ssr}\")\n",
-    "print(f\"TSS of the model is {results.centered_tss}\")\n",
-    "print()\n",
-    "print(f\"R-sqaure of the model is {results.rsquared}\")\n",
-    "print(f\"Adjusted R-sqaure of the model is {results.rsquared_adj}\")\n",
-    "print(f\"F-score of the model is {results.fvalue}\")"
+    "print(f\"TSS of the model is {results.centered_tss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                disease   R-squared:                       0.518\n",
+      "Model:                            OLS   Adj. R-squared:                  0.507\n",
+      "Method:                 Least Squares   F-statistic:                     46.27\n",
+      "Date:                Fri, 03 Jul 2020   Prob (F-statistic):           3.83e-62\n",
+      "Time:                        21:04:51   Log-Likelihood:                -2386.0\n",
+      "No. Observations:                 442   AIC:                             4794.\n",
+      "Df Residuals:                     431   BIC:                             4839.\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "age          -10.0122     59.749     -0.168      0.867    -127.448     107.424\n",
+      "sex         -239.8191     61.222     -3.917      0.000    -360.151    -119.488\n",
+      "bmi          519.8398     66.534      7.813      0.000     389.069     650.610\n",
+      "bp           324.3904     65.422      4.958      0.000     195.805     452.976\n",
+      "s1          -792.1842    416.684     -1.901      0.058   -1611.169      26.801\n",
+      "s2           476.7458    339.035      1.406      0.160    -189.621    1143.113\n",
+      "s3           101.0446    212.533      0.475      0.635    -316.685     518.774\n",
+      "s4           177.0642    161.476      1.097      0.273    -140.313     494.442\n",
+      "s5           751.2793    171.902      4.370      0.000     413.409    1089.150\n",
+      "s6            67.6254     65.984      1.025      0.306     -62.065     197.316\n",
+      "const        152.1335      2.576     59.061      0.000     147.071     157.196\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.506   Durbin-Watson:                   2.029\n",
+      "Prob(Omnibus):                  0.471   Jarque-Bera (JB):                1.404\n",
+      "Skew:                           0.017   Prob(JB):                        0.496\n",
+      "Kurtosis:                       2.726   Cond. No.                         227.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_OLS_T = X_OLS.transpose()\n",
+    "XX_T = np.dot(X_OLS_T.to_numpy(), X_OLS.to_numpy())\n",
+    "XX_T_inv = np.linalg.inv(XX_T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate beta(coefficients)\n",
+    "XX_T_inv_X_T = np.dot(XX_T_inv, X_OLS_T)\n",
+    "beta = np.dot(XX_T_inv_X_T, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_sq = results.ssr/(442-10-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculated std error for age, coefficient is -10.0122, standard error of coefficient is 59.75\n",
+      "Calculated std error for sex, coefficient is -239.8191, standard error of coefficient is 61.22\n",
+      "Calculated std error for bmi, coefficient is 519.8398, standard error of coefficient is 66.53\n",
+      "Calculated std error for bp, coefficient is 324.3904, standard error of coefficient is 65.42\n",
+      "Calculated std error for s1, coefficient is -792.1842, standard error of coefficient is 416.68\n",
+      "Calculated std error for s2, coefficient is 476.7458, standard error of coefficient is 339.03\n",
+      "Calculated std error for s3, coefficient is 101.0446, standard error of coefficient is 212.53\n",
+      "Calculated std error for s4, coefficient is 177.0642, standard error of coefficient is 161.48\n",
+      "Calculated std error for s5, coefficient is 751.2793, standard error of coefficient is 171.90\n",
+      "Calculated std error for s6, coefficient is 67.6254, standard error of coefficient is 65.98\n",
+      "Calculated std error for const, coefficient is 152.1335, standard error of coefficient is 2.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "for i in range(0, 11):\n",
+    "    print(f\"Calculated std error for {X_OLS.columns[i]}, \"\n",
+    "          f\"coefficient is {beta[i][0]:.4f}, \"\n",
+    "          f\"standard error of coefficient is {math.sqrt(sigma_sq*XX_T_inv[i][i]):.2f}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets verify!\n",
+    "Lets verify other metrics as well!\n",
     "\n",
     "$$\n",
     "R^2 = 1 - \\frac{RSS}{TSS} \\;\\; = 1 - \\frac{1263983.15}{2621009.12} \\;\\; = 0.52 \\\\\n",
@@ -484,20 +673,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO\n",
-    "\n",
-    "- Compare t-score for all individual features\n",
-    "- Maximum Likelihood\n",
-    "- Confidence Interval\n",
-    "- coeff and std error in multiple linear regression"
+    "As can be observed our calculated coefficients and Standard Error for all the coefficients using the formula match exactly! Using that, we can easily verify t-values as well."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Maximum Likelihood for Simple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Maximum Likelihood we can derive the same results that we did in the beginning of the notebook. This is due to the assumptions we have made about random error $\\epsilon$\n",
+    "- $\\epsilon \\sim N(0, \\sigma^2)$ and is indepdent across observations and of X\n",
+    "- $\\epsilon$ has constant variation\n",
+    "\n",
+    "Based on the above, the conditional probability density function of y is:\n",
+    "$$\n",
+    "\\Pi_{i=1}^np(y_i|x_i;\\beta_0, \\beta_1, \\sigma^2) \n",
+    "= \\Pi_{i=1}^n\\frac{1}{\\sqrt{2\\pi\\sigma^2}}e^{-\\frac{(y_i-(\\beta_0+\\beta_1x_i))^2}{2\\sigma^2}}\n",
+    "$$\n",
+    "The above is called **Likelihood**\n",
+    "\n",
+    "Taking the Log of the above:\n",
+    "$$\n",
+    "log\\Pi_{i=1}^np(y_i|x_i;\\beta_0, \\beta_1, \\sigma^2) = \\sum_{i=1}^nlogp(y_i|x_i;\\beta_0, \\beta_1, \\sigma^2) \\\\\n",
+    "-\\frac{n}{2}log2\\pi - nlogs - \\frac{1}{2s^2}\\sum_{i=1}^n(y_i - (\\beta_0 + \\beta_1x_i))^2\n",
+    "$$\n",
+    "The above is called **Log Likelihood**\n",
+    "\n",
+    "Now we use the derivative of the above to find $\\hat{\\beta_0}$, $\\hat{\\beta_1}$, $\\hat{\\sigma}^2$ that maximizes the log likelihood and consequently the likelihood\n",
+    "\n",
+    "$$\n",
+    "\\hat{\\beta_0} = \\bar{y} - \\hat{\\beta_1}\\bar{x} \\\\\n",
+    "\\hat{\\beta_1} = \\frac{\\sum{(y_i-\\bar{y})(x_i-\\bar{x}})}{\\sum{(x_i-\\bar{x})^2}} \\\\\n",
+    "\\hat{\\sigma}^2 = \\frac{1}{n}\\sum_{i=1}^n(y_i - ({\\hat{\\beta_0}} + \\hat{\\beta_1}x_i))^2\n",
+    "$$\n",
+    "\n",
+    "As can be seen from above, the results are same as the ones we got at the beginning."
+   ]
   }
  ],
  "metadata": {
